# hello_atomvm_port

./: CMakeLists.txt  Kconfig  README.md
examples/elixir/: mix.exs
examples/elixir/lib/: sample_app.ex
examples/elixir/lib/sample_app/: port.ex
ports/: sample_app_port.c
ports/include/: sample_app_port.h
